enum TransactionRecordState {
    INITIALIZED = 1;
    OPENING = 2;
    OPEN = 3;
    SETTLING = 4;
    SETTLED = 5;
    WITHDRAWABLE = 6;
    WITHDRAWING = 7;
    WITHDRAWN = 8;
}

message TransactionRecord {
    required TransactionRecordState state = 1;
    required bytes counterparty = 2;
    optional bytes totalBalance = 3;
    optional bytes currentOffchainBalance = 4;
    optional bytes currentOnchainBalance = 5;
    optional bytes initialBalance = 6;
    optional bytes currentIndex = 7;
    optional bytes channelKey = 8;
    optional bytes lastTransaction = 9;
    required bytes restoreTransaction = 10;
}